--- a/数据结构.md
+++ b/数据结构.md
@@ -14,15 +14,15 @@ API示例图:
 
 #### Java集合Collection接口包含以下几种接口:
 
-- **List**
+- **List**线性表
   - ArrayList
   - LinkedList
     - **Stack栈结构**
-- **Set**
+- **Set**集合
   - HashSet
   - LinkedHashSet
   - TreeSet
-- **Queue**
+- **Queue**队列
 
 
 
